--- a/root/stylesheets/site.css
+++ b/root/stylesheets/site.css
@@ -5,9 +5,14 @@ body {
     background-color: #333333;
 }
 
-.container {
-    width: 100vw;
-    height: 100vh;
+.container-fluid {
+    /*width: 100vw;*/
+    /*height: 100vh;*/
+
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 
     /*background-color: #333333;*/
     color: #CCCCCC;
@@ -15,7 +20,7 @@ body {
     font-size: x-large;
 }
 
-.container, .main-button, .tahoma-bold {
+.container-fluid, .main-button, .tahoma-bold {
     font-family: Tahoma,Verdana,Segoe,sans-serif;
     font-weight: bold;
 }
