--- a/root/stylesheets/site.css
+++ b/root/stylesheets/site.css
@@ -74,6 +74,7 @@ body {
     border-width: 1px;
     background-color: #CCCCCC;
     transition: all 150ms;
+    z-index: 0;
 }
 
 .main-button:hover {
@@ -82,6 +83,150 @@ body {
 
 .main-button:active {
     transform: scale(0.95)
+}
+
+.nav-button {
+    padding: 6px;
+    text-transform: uppercase;
+    font-size: large;
+    border-width: 1px;
+    background-color: #CCCCCC;
+    transition: all 150ms;
+    z-index: -1;
+}
+
+.nav-button:hover {
+    transform: scale(1.05);
+}
+
+.nav-button:active {
+    transform: scale(0.95)
+}
+
+.background-logo {
+    font-size: 35vh;
+    text-transform: uppercase;
+    text-overflow: clip;
+    overflow: hidden;
+    position: fixed;
+    color: #444444;
+    cursor: default;
+    
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* IE/Edge */
+    user-select: none;           /* non-prefixed version, currently not supported by any browser */
+}
+
+/* Custom Sizes */
+.spacing-width-half {
+    width: calc(100vw * 1/47/2);
+}
+
+.spacing-width-1 {
+    width: calc(100vw * 1/47);
+}
+
+.spacing-height-half {
+    height: calc(100vw * 1/47/2);
+}
+
+.spacing-height-1 {
+    height: calc(100vw * 1/47);
+}
+
+.spacing-height-2 {
+    height: calc(100vw * 2/47);
+}
+
+.spacing-height-3 {
+    height: calc(100vw * 3/47);
+}
+
+.spacing-height-4 {
+    height: calc(100vw * 4/47);
+}
+
+.spacing-height-5 {
+    height: calc(100vw * 5/47);
+}
+
+.spacing-height-6 {
+    height: calc(100vw * 6/47);
+}
+
+.spacing-height-7 {
+    height: calc(100vw * 7/47);
+}
+
+.spacing-height-8 {
+    height: calc(100vw * 8/47);
+}
+
+.spacing-height-9 {
+    height: calc(100vw * 9/47);
+}
+
+.spacing-height-10 {
+    height: calc(100vw * 10/47);
+}
+
+.spacing-height-11 {
+    height: calc(100vw * 11/47);
+}
+
+.spacing-height-12 {
+    height: calc(100vw * 12/47);
+}
+
+.spacing-margin-left-half {
+     margin-left: calc(100vw * 1/47/2) !important;
+}
+
+.spacing-margin-left-1 {
+     margin-left: calc(100vw * 1/47) !important;
+}
+
+.spacing-margin-top-half {
+    margin-top: calc(100vw * 1/47/2);
+}
+
+.spacing-margin-top-1 {
+    margin-top: calc(100vw * 1/47);
+}
+
+.spacing-margin-top-2 {
+    margin-top: calc(100vw * 2/47);
+}
+
+.spacing-margin-top-3 {
+    margin-top: calc(100vw * 3/47);
+}
+
+.spacing-margin-top-4 {
+    margin-top: calc(100vw * 4/47);
+}
+
+.spacing-margin-top-5 {
+    margin-top: calc(100vw * 5/47);
+}
+
+.spacing-margin-top-6 {
+    margin-top: calc(100vw * 6/47);
+}
+
+.spacing-margin-top-7 {
+    margin-top: calc(100vw * 7/47);
+}
+
+.spacing-margin-top-8 {
+    margin-top: calc(100vw * 8/47);
+}
+
+.full-width {
+    width: 100%;
 }
 
 /* Coloring */
@@ -122,4 +267,16 @@ body {
 .background-blue {
     background-color: #385475;
     border-color: #4c6889;
+}
+
+/* Styling */
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.pull-left {
+  float: left !important;
+}
+.pull-right {
+  float: right !important;
 }
