Mostly fixed box layout and did a few other things

--- a/root/stylesheets/positioning.css
+++ b/root/stylesheets/positioning.css
@@ -142,3 +142,167 @@
 .full-width {
     width: 100%;
 }
+
+/* Custom Bootstrap Columns */
+.col-custom-vw-1, .col-custom-vw-2, .col-custom-vw-3, .col-custom-vw-4, .col-custom-vw-5, .col-custom-vw-6, .col-custom-vw-7, .col-custom-vw-8, .col-custom-vw-9, .col-custom-vw-10, .col-custom-vw-11, .col-custom-vw-12 {
+  position: relative;
+  min-height: 1px;
+  /*padding-left: 15px;*/
+  /*padding-right: 15px;*/
+}
+.col-custom-vw-1, .col-custom-vw-2, .col-custom-vw-3, .col-custom-vw-4, .col-custom-vw-5, .col-custom-vw-6, .col-custom-vw-7, .col-custom-vw-8, .col-custom-vw-9, .col-custom-vw-10, .col-custom-vw-11, .col-custom-vw-12 {
+  float: left;
+}
+.col-custom-vw-12 {
+  width: 100vw;
+}
+.col-custom-vw-11 {
+  width: 91.66666667vw;
+}
+.col-custom-vw-10 {
+  width: 83.33333333vw;
+}
+.col-custom-vw-9 {
+  width: 75vw;
+}
+.col-custom-vw-8 {
+  width: 66.66666667vw;
+}
+.col-custom-vw-7 {
+  width: 58.33333333vw;
+}
+.col-custom-vw-6 {
+  width: 50vw;
+}
+.col-custom-vw-5 {
+  width: 41.66666667vw;
+}
+.col-custom-vw-4 {
+  width: 33.33333333vw;
+}
+.col-custom-vw-3 {
+  width: 25vw;
+}
+.col-custom-vw-2 {
+  width: 16.66666667vw;
+}
+.col-custom-vw-1 {
+  width: 8.33333333vw;
+}
+.col-custom-vw-pull-12 {
+  right: 100vw;
+}
+.col-custom-vw-pull-11 {
+  right: 91.66666667vw;
+}
+.col-custom-vw-pull-10 {
+  right: 83.33333333vw;
+}
+.col-custom-vw-pull-9 {
+  right: 75vw;
+}
+.col-custom-vw-pull-8 {
+  right: 66.66666667vw;
+}
+.col-custom-vw-pull-7 {
+  right: 58.33333333vw;
+}
+.col-custom-vw-pull-6 {
+  right: 50vw;
+}
+.col-custom-vw-pull-5 {
+  right: 41.66666667vw;
+}
+.col-custom-vw-pull-4 {
+  right: 33.33333333vw;
+}
+.col-custom-vw-pull-3 {
+  right: 25vw;
+}
+.col-custom-vw-pull-2 {
+  right: 16.66666667vw;
+}
+.col-custom-vw-pull-1 {
+  right: 8.33333333vw;
+}
+.col-custom-vw-pull-0 {
+  right: auto;
+}
+.col-custom-vw-push-12 {
+  left: 100vw;
+}
+.col-custom-vw-push-11 {
+  left: 91.66666667vw;
+}
+.col-custom-vw-push-10 {
+  left: 83.33333333vw;
+}
+.col-custom-vw-push-9 {
+  left: 75vw;
+}
+.col-custom-vw-push-8 {
+  left: 66.66666667vw;
+}
+.col-custom-vw-push-7 {
+  left: 58.33333333vw;
+}
+.col-custom-vw-push-6 {
+  left: 50vw;
+}
+.col-custom-vw-push-5 {
+  left: 41.66666667vw;
+}
+.col-custom-vw-push-4 {
+  left: 33.33333333vw;
+}
+.col-custom-vw-push-3 {
+  left: 25vw;
+}
+.col-custom-vw-push-2 {
+  left: 16.66666667vw;
+}
+.col-custom-vw-push-1 {
+  left: 8.33333333vw;
+}
+.col-custom-vw-push-0 {
+  left: auto;
+}
+.col-custom-vw-offset-12 {
+  margin-left: 100vw;
+}
+.col-custom-vw-offset-11 {
+  margin-left: 91.66666667vw;
+}
+.col-custom-vw-offset-10 {
+  margin-left: 83.33333333vw;
+}
+.col-custom-vw-offset-9 {
+  margin-left: 75vw;
+}
+.col-custom-vw-offset-8 {
+  margin-left: 66.66666667vw;
+}
+.col-custom-vw-offset-7 {
+  margin-left: 58.33333333vw;
+}
+.col-custom-vw-offset-6 {
+  margin-left: 50vw;
+}
+.col-custom-vw-offset-5 {
+  margin-left: 41.66666667vw;
+}
+.col-custom-vw-offset-4 {
+  margin-left: 33.33333333vw;
+}
+.col-custom-vw-offset-3 {
+  margin-left: 25vw;
+}
+.col-custom-vw-offset-2 {
+  margin-left: 16.66666667vw;
+}
+.col-custom-vw-offset-1 {
+  margin-left: 8.33333333vw;
+}
+.col-custom-vw-offset-0 {
+  margin-left: 0vw;
+}
