--- a/root/stylesheets/site.css
+++ b/root/stylesheets/site.css
@@ -78,7 +78,7 @@ body {
     text-transform: uppercase;
     /*font-size: large;*/
     font-size: 1vw;
-    border-width: 1px;
+    border-width: 0.1vw;
     background-color: #CCCCCC;
     transition: all 150ms;
     z-index: 0;
@@ -135,8 +135,9 @@ body {
     left: -1.4vw;
     /*left: -1.2vw;*/
     right: -999vw;
-    top: 0;
+    /*top: 0;*/
     /*top: -14vh;*/
+    top: -15.2vh;
     z-index: -999;
 }
 
@@ -149,7 +150,8 @@ body {
     color: #444444;
     cursor: default;
     width: 1000vw;
-    line-height: 68%;
+    /*line-height: 68%;*/
+    letter-spacing: 0.83vw;
     
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none;   /* Chrome/Safari/Opera */
@@ -161,13 +163,13 @@ body {
 
 .nav-button {
     /*position: relative;*/
-    /*z-index: 999;*/
+    z-index: 999;
     /*padding: 6px;*/
     padding: 0.2vw;
     text-transform: uppercase;
     /*font-size: large;*/
     font-size: 1vw;
-    border-width: 1px;
+    border-width: 0.1vw;
     background-color: #CCCCCC;
     transition: all 150ms;
 }
@@ -178,6 +180,24 @@ body {
 
 .nav-button:active {
     transform: scale(0.95)
+}
+
+.nav-button-left {
+    position: absolute;
+    left: 0;
+    top: calc(50vh - (100vw * 3/47/2));
+    transform-origin: left;
+}
+
+.nav-button-right {
+    position: absolute;
+    right: 0;
+    top: calc(50vh - (100vw * 3/47/2));
+    transform-origin: right;
+}
+
+.nav-button-row2 {
+    z-index: -999;
 }
 
 .nav-button-row {
@@ -253,6 +273,7 @@ body {
 .title {
     text-transform: uppercase;
     line-height: 100%;
+    letter-spacing: 0.07vw;
 }
 
 .image-caption {
