--- a/root/stylesheets/forum.css
+++ b/root/stylesheets/forum.css
@@ -1,6 +1,7 @@
 .inner-container {
     background-color: #555555;
     height: 2000px; /* For testing purposes */
+    color: #CCCCCC;
 }
 
 .forum-footer {
@@ -11,4 +12,8 @@
     color: #CCCCCC;
     font-size: 2em;
     padding: calc(100vw * 1/47);
+}
+
+.reset-font-size {
+    font-size: initial;
 }
