--- a/root/stylesheets/register.css
+++ b/root/stylesheets/register.css
@@ -1,28 +1,29 @@
-.login-container {
+.register-container {
     background-color: #555555;
     color: #CCCCCC;
     padding: calc(100vw * 1/47);
+    margin-bottom: 10vh;
 }
 
-.login-header {
+.register-header {
     /*margin: calc(100vw * 1/47);*/
     text-align: center;
 }
 
-.login-container .row {
+.register-container .row {
     padding: calc(100vw * 1/47/4);
 }
 
-.login-container input {
+.register-container input {
     height: 36px;
     width: 100%;
 }
 
-.login-container input:not([type=submit]) {
+.register-container input:not([type=submit]) {
     color: #222222;
 }
 
-.login-container input[type=submit] {
+.register-container input[type=submit] {
     /*margin-top: calc(100vw * 1/47);*/
     /*margin-bottom: calc(100vw * 1/47);*/
     margin-top: 10%;
@@ -33,6 +34,15 @@
     font-size: 1.3em;
 }
 
-.login-errors {
+.register-errors {
     color: #FF5555;
+}
+
+.register-successes {
+    color: #55FF55;
+}
+
+.not-required {
+    font-size: 0.9em;
+    color: #888888;
 }
