Modified menu to work with other pages, and fixed some things

--- a/root/stylesheets/forum.css
+++ b/root/stylesheets/forum.css
@@ -2,6 +2,7 @@
     background-color: #555555;
     height: 2000px; /* For testing purposes */
     color: #CCCCCC;
+    margin-top: 15vh;
 }
 
 .forum-footer {
