--- a/root/stylesheets/topic.css
+++ b/root/stylesheets/topic.css
@@ -17,7 +17,8 @@
     padding: calc(100vw * 1/47/2);
     border-radius: 2px;
     color: #CCCCCC;
-    min-height: calc(100vw * 1/47 * 5);
+    /*min-height: calc(100vw * 1/47 * 5);*/
+    
 }
 
 .post-user-column {
@@ -28,8 +29,34 @@
     
 }
 
+/* These next three rules make the columns the same height */
+.post-bootstrap-row {
+    display: flex;
+}
+
+.post-user-bootstrap-column {
+    flex: 1;
+}
+
+.post-content-bootstrap-column {
+    flex: 1;
+    
+}
+
 .post-user-name {
     text-align: center;
+}
+
+.post-user-profile-picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: calc(100vw * 1/47/4);
+    margin-bottom: calc(100vw * 1/47/4);
+}
+
+.post-user-details {
+    
 }
 
 .post-header, .post-footer {
