--- a/root/stylesheets/bbcode.css
+++ b/root/stylesheets/bbcode.css
@@ -16,3 +16,23 @@
     background-color: #555555;
     padding: 4px;
 }
+
+/* Code */
+.code {
+    background-color: #666666;
+    padding: 2px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.code-header {
+    padding: 2px;
+    padding-left: 6px;
+}
+
+.code-content {
+    background-color: #2b2b2b;
+    font-family: "Lucida Console", Monaco, monospace;
+    padding: 4px;
+    white-space: pre;
+}
